--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <p>7.00</p>
         </div>
         <div class="col-md-3 ">
-          <img src="Image/prof_5.jpg" class="img-fluid" alt="Professionals-1">
+          <img src="Image/Prof_4.jpg" class="img-fluid" alt="Professionals-1">
           <a href="" class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quae facilis,
             deleniti porro omnis at!</a>
           <p>7.00</p>
@@ -218,7 +218,7 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-body">
-            <img src="/Image/Prof_2.jpg" alt="" class="img-fluid">
+            <img src="/Image/Prof_4.jpg" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -255,7 +255,7 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-body">
-            <img src="/Image/Prof_2.jpg" alt="" class="img-fluid">
+            <img src="/Image/Prof_4.jpg" alt="" class="img-fluid">
           </div>
         </div>
       </div>
