--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="/CSS/style.css">
 
   <title>Hi there! I'm Shishir Rehan</title>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/5cb5aac9d3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -260,7 +260,6 @@
         </div>
       </div>
     </div>
-
   </div>
 
 
@@ -330,6 +329,42 @@
       </form>
     </div>
   </div>
+
+
+
+  <!-- this is footer section  -->
+  <section>
+
+    <div class="footer">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col text-center text-white">
+            <em>"Work hard in silence, let your success be your noise"</em>
+            <p>Frank Ocean</p>
+          </div>
+          <div class="row py-5">
+            <div class="col text-center">
+              <div class="circle-2">
+                <i class="fab fa-facebook-f"></i>
+              </div>
+              <div class="circle-2">
+                <i class="fab fa-youtube"></i>
+              </div>
+              <div class="circle-2">
+                <i class="fab fa-github"></i>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="row py-5">
+          <div class="col text-center text-white">
+            <p>&copy;All Right Reserved To MD Shishir Rehan</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
