--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- this is navbar section -->
 
 
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-container">
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-container"
     <div class="container-fluid">
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -48,28 +48,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#About">ABOUT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Education">EDUCATION</a>
-          </li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="#About">ABOUT</a> </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#Project">PROJECT</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="#Education">EDUCATION</a></li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#Portfolio">PROTFOLIO</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="#Project">PROJECT</a></li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#Gallery">GALLERY</a>
-          </li>
+          <li class="nav-item"> <a class="nav-link" href="#Portfolio">PROTFOLIO</a> </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#Contact">CONTACT</a>
-          </li>
+          <li class="nav-item"> <a class="nav-link" href="#Gallery">GALLERY</a></li>
+
+          <li class="nav-item"> <a class="nav-link" href="#Contact">CONTACT</a> </li>
         </ul>
       </div>
     </div>
